--- a/app/src/main/res/layout-night/fragment_main.xml
+++ b/app/src/main/res/layout-night/fragment_main.xml
@@ -46,6 +46,21 @@
         app:layout_constraintVertical_bias="0.047" />
 
 
+    <ImageButton
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="516dp"
+        android:background="@color/invisible"
+        android:src="@drawable/ic_baseline_share_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollText"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ScrollView
         android:id="@+id/scrollText"
         android:layout_width="match_parent"
