--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="tab_background_select">#F4F5FF</color>
     <color name="tab_background">#ECEEFB</color>
     <color name="tab_underline">#999CAB</color>
+    <color name="invisible">#00999CAB</color>
     ------night_colors
     <color name="night_background">#312D2D</color>
     <color name="night_tab_text_unselect">#888A93</color>
